translation student view

--- a/app/Resources/views/course_info/view/student_info.html.twig
+++ b/app/Resources/views/course_info/view/student_info.html.twig
@@ -1,18 +1,18 @@
 <section id="presentation-section" class="content">
-    <h3 class="blue_uca mt-5">Informations pratiques</h3>
+    <h3 class="blue_uca mt-5">{{ 'app.view.student.tabs.info' | trans }}</h3>
     <input type="image" src="/build/images/information_photo.jpg">
 
     <div class="row mt-4">
         <div class="col-4">
             <input class="student-icon" type="image" src="/build/images/calendrier_picto.png">
-            Calendrier
+            {{ 'app.view.student.info.agenda' | trans }}
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
         </div>
         <div class="col-4">
             <input class="student-icon" type="image" src="/build/images/organisation_picto.png">
-            Organisation
+            {{ 'app.view.student.info.organization' | trans }}
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
