--- a/app/Resources/views/course_info/view/student_objectives.html.twig
+++ b/app/Resources/views/course_info/view/student_objectives.html.twig
@@ -1,4 +1,4 @@
-<section id="presentation-section" class="content">
+<section id="objectives-section" class="content">
     <h3 class="blue_uca mt-5">{{ 'app.view.student.tabs.objectives' | trans }}</h3>
     <div class="row">
         <div class="col-4">
