--- a/app/Resources/views/course_info/view/student_evaluation.html.twig
+++ b/app/Resources/views/course_info/view/student_evaluation.html.twig
@@ -1,4 +1,4 @@
-<section id="presentation-section" class="content">
+<section id="evaluation-section" class="content">
     <h3 class="blue_uca mt-5">{{ 'app.view.student.tabs.evaluation' | trans }}</h3>
     <input type="image" src="/build/images/modalite_photo.jpg">
 
