--- a/app/Resources/views/course_info/view/student_teaching_mode_dist.html.twig
+++ b/app/Resources/views/course_info/view/student_teaching_mode_dist.html.twig
@@ -2,12 +2,12 @@
 <ul class="text-primary" style="padding-left:0px;">
 <span style="border-bottom: solid white; border-width:0 1px ;">{{ 'app.view.student.presentation.distant' | trans }}</span>
     {% if courseInfo.teachingCmDist is not null %}
-        <li class="li-valid"><i class="fas fa-check blue_uca"></i> {{ 'app.view.student.presentation.hours_cm' | trans({'%hours%': courseInfo.teachingCmDist}) }}</li>
+        <li class="li-valid"><i class="fas fa-check text-primary"></i> {{ 'app.view.student.presentation.hours_cm' | trans({'%hours%': courseInfo.teachingCmDist}) }}</li>
     {% endif %}
     {% if courseInfo.teachingTdDist is not null %}
-        <li class="li-valid"><li class="li-valid"><i class="fas fa-check blue_uca"></i> {{ 'app.view.student.presentation.hours_td' | trans({'%hours%': courseInfo.teachingTdDist}) }}</li>
+        <li class="li-valid"><li class="li-valid"><i class="fas fa-check text-primary"></i> {{ 'app.view.student.presentation.hours_td' | trans({'%hours%': courseInfo.teachingTdDist}) }}</li>
     {% endif %}
     {% for teaching in courseInfo.teachings %}
-        <li class="li-valid"><li class="li-valid"><i class="fas fa-check blue_uca"></i> {{ 'app.view.student.presentation.hours_teachings' | trans({'%hours%': teaching.hourlyVolume, '%type%': teaching.type}) }}</li>
+        <li class="li-valid"><li class="li-valid"><i class="fas fa-check text-primary"></i> {{ 'app.view.student.presentation.hours_teachings' | trans({'%hours%': teaching.hourlyVolume, '%type%': teaching.type}) }}</li>
     {% endfor %}
 </ul>
