--- a/app/Resources/views/course_info/view/student_presentation.html.twig
+++ b/app/Resources/views/course_info/view/student_presentation.html.twig
@@ -114,7 +114,7 @@
             </p>
         </div>
     </div>
-<!--
+    <!--
 {#
     <div class="row mt-5">
         {% if courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::HYBRID') %}
@@ -136,6 +136,8 @@
     </div>
     #}
 -->
+
+    {#
     <div class="row mt-5" style="display: flex; flex-wrap: nowrap; justify-content: space-around">
         {% if courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::HYBRID') %}
             <div>{% include 'course_info/view/student_teaching_mode_in_class.html.twig' %}</div>
@@ -145,6 +147,16 @@
             <div>{% include 'course_info/view/student_teaching_mode_dist.html.twig' %}</div>
         {% elseif courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::IN_CLASS') %}
             <div>{% include 'course_info/view/student_teaching_mode_in_class.html.twig' %}</div>
+        {% endif %}
+    </div>
+    #}
+
+    <div class="teaching-modes mt-5">
+        {% if courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::IN_CLASS') or courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::HYBRID') %}
+            {% include 'course_info/view/student_teaching_mode_in_class.html.twig' %}
+        {% endif %}
+        {% if courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::DIST') or courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::HYBRID') %}
+            {% include 'course_info/view/student_teaching_mode_dist.html.twig' %}
         {% endif %}
     </div>
 
