Presentation info responsive

--- a/app/Resources/assets/scss/_custom_variables.scss
+++ b/app/Resources/assets/scss/_custom_variables.scss
@@ -13,6 +13,7 @@ $gray-100: #f8f9fa;
 $body-bg: $gray-100;
 $input-disabled-bg: $gray-100;
 
-// Primary
+// Colors
 $primary: #46aed8;
 $secondary: #868e96;
+$dark-light: #202020;
