--- a/app/Resources/views/course_info/view/student_presentation.html.twig
+++ b/app/Resources/views/course_info/view/student_presentation.html.twig
@@ -101,32 +101,25 @@
             {% endif %}
         </div>
     </div>
-    <div class="row mt-5">
-        <div class="w-100 col-12">
-            <div class="mr-3 mb-3" style="float: left; width: 50%;">
-                {% if courseInfo.mediaType == 'image' and courseInfo.image is not null %}
-                    {% set imgSrc = courseInfo.image | split('/') | last %}
-                    <img class="img-thumbnail img-fluid" src="{{ asset('data/' ~ imgSrc) }}">
-                {% elseif courseInfo.mediaType == 'video' and courseInfo.video is not null %}
-                    <div class="embed-responsive embed-responsive-16by9">
-                        {{ courseInfo.video|raw }}
-                    </div>
-                {% else %}
-                    <div class="border rounded d-flex align-items-center justify-content-center"
-                         style="min-height: 200px;">
-                        <i class="fas fa-4x fa-images text-light"></i>
-                    </div>
-                {% endif %}
-            </div>
-            <p>
-                {{ courseInfo.summary|purify }}
-            </p>
-            <p class="ml-4">
-            <div class="text-bold col-12">{{ 'app.view.student.presentation.teachers' | trans }}</div>
+
+
+    <div class="presentation_summary mt-5">
+        <div class="media">
+            {% if courseInfo.mediaType == 'image' and courseInfo.image is not null %}
+                {% set imgSrc = courseInfo.image | split('/') | last %}
+                <img class="img-fluid" src="{{ asset('data/' ~ imgSrc) }}">
+            {% elseif courseInfo.mediaType == 'video' and courseInfo.video is not null %}
+                <div class="embed-responsive embed-responsive-16by9">
+                    {{ courseInfo.video|raw }}
+                </div>
+            {% endif %}
+        </div>
+        {{ courseInfo.summary|purify }}
+        <div class="text-bold">
+            {{ 'app.view.student.presentation.teachers' | trans }}
             {% for teacher in courseInfo.courseTeachers %}
                 <span class="text-primary"> {% set teachers =(not loop.first ? ', ') %}</span>
             {% endfor %}
-            </p>
         </div>
     </div>
     <!--
